--- a/ng-housing/package.json
+++ b/ng-housing/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.2.1",
     "@angular/platform-browser-dynamic": "~10.2.1",
     "@angular/router": "~10.2.1",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.5.2",
     "ngx-bootstrap": "^6.1.0",
