--- a/ng-housing/angular.json
+++ b/ng-housing/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-housing": {
+    "e-housing": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng-housing",
+            "outputPath": "dist/e-housing",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,18 +64,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-housing:build"
+            "browserTarget": "e-housing:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng-housing:build:production"
+              "browserTarget": "e-housing:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-housing:build"
+            "browserTarget": "e-housing:build"
           }
         },
         "test": {
@@ -112,18 +112,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng-housing:serve"
+            "devServerTarget": "e-housing:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng-housing:serve:production"
+              "devServerTarget": "e-housing:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "ng-housing",
+  "defaultProject": "e-housing",
   "cli": {
     "analytics": "dc6382c4-07b3-49ea-9fde-d39f3976ba83"
   }
